force-app/main/default/objects/Personal_Project__c/Personal_Project__c.object-meta.xml
<CustomObject>
    <description>Personal/side projects showcased on the portfolio with YouTube video demos.</description>
    <label>Personal Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personal Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>