force-app/main/default/objects/Personal_Project__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Brief description of the personal project.</description>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>