force-app/main/default/objects/Personal_Project__c/fields/GitHub_URL__c.field-meta.xml
<CustomField>
    <fullName>GitHub_URL__c</fullName>
    <description>GitHub repository URL for the project source code.</description>
    <label>GitHub URL</label>
    <type>Url</type>
</CustomField>