force-app/main/default/objects/Personal_Project__c/fields/Live_URL__c.field-meta.xml
<CustomField>
    <fullName>Live_URL__c</fullName>
    <description>URL to the live deployed version of the project.</description>
    <label>Live URL</label>
    <type>Url</type>
</CustomField>