force-app/main/default/objects/Personal_Project__c/fields/Tech_Stack__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stack__c</fullName>
    <description>Comma-separated list of technologies used (e.g. LWC, Apex, Node.js).</description>
    <label>Tech Stack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>