force-app/main/default/objects/Personal_Project__c/fields/YouTube_URL__c.field-meta.xml
<CustomField>
    <fullName>YouTube_URL__c</fullName>
    <description>YouTube video URL for the project demo. Supports watch, shortened, and embed URLs.</description>
    <label>YouTube URL</label>
    <type>Url</type>
</CustomField>